--- a/FE/vote24/package.json
+++ b/FE/vote24/package.json
@@ -11,7 +11,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
