--- a/BE/package.json
+++ b/BE/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "Team A205",
   "main": "index.js",
- "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "fs": "^0.0.1-security",
