--- a/FE/package.json
+++ b/FE/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.1",
+    "react-toastify": "^8.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
