--- a/FE/package.json
+++ b/FE/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
+    "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "next": "12.0.8",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.1",
+    "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
+    "redux-logger": "^3.0.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
