--- a/FE/package.json
+++ b/FE/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
