--- a/FE/package.json
+++ b/FE/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.1",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
     "redux-logger": "^3.0.6",
