--- a/FE/package.json
+++ b/FE/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.24.1",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.6",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
