--- a/BE/.gitignore
+++ b/BE/.gitignore
@@ -1,9 +1,9 @@
 node_modules
 dist/*
 *.log
-# uploads/logo/*
-# uploads/event/*
-# uploads/notice/*
-# uploads/service/*
+uploads/logo/*
+uploads/event/*
+uploads/notice/*
+uploads/service/*
 server.js
 utils/mysql.js
