feat: Add page restriction logic feat: Add classnames library docs: Edit gitignore

--- a/FE/.gitignore
+++ b/FE/.gitignore
@@ -68,4 +68,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# jihoo backup files
+/backup(not_using)
+
 # End of https://www.toptal.com/developers/gitignore/api/macos
