--- a/BE/package.json
+++ b/BE/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "node-schedule": "^2.1.0",
     "path": "^0.12.7",
     "winston": "^3.4.0",
     "winston-daily-rotate-file": "^4.5.5"
